Added input and movement systems

--- a/GameEngine_ES/GameEngine_ES.vcxproj.filters
+++ b/GameEngine_ES/GameEngine_ES.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="Systems\AnimationSystem.cpp">
       <Filter>Systems</Filter>
     </ClCompile>
+    <ClCompile Include="Systems\InputSystem.cpp">
+      <Filter>Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="Systems\MovementSystem.cpp">
+      <Filter>Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -45,6 +51,12 @@
       <Filter>Systems</Filter>
     </ClInclude>
     <ClInclude Include="Systems\AnimationSystem.h">
+      <Filter>Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="Systems\InputSystem.h">
+      <Filter>Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="Systems\MovementSystem.h">
       <Filter>Systems</Filter>
     </ClInclude>
   </ItemGroup>
